--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -39,4 +39,6 @@
       &lt;/div>
     </code>
   </pre>
+  <h2>场景二：常用按钮</h2>
+  <button class="btn px-btn px-btn-success">常用按钮</button>
 </section>
