--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -41,4 +41,9 @@
   </pre>
   <h2>场景二：常用按钮</h2>
   <button class="btn px-btn px-btn-success">常用按钮</button>
+  <pre class="px-pre">
+    <code class="px-code">
+      &lt;button class="btn px-btn px-btn-success">常用按钮&lt;/button>
+    </code>
+  </pre>
 </section>
