--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -41,9 +41,14 @@
   </pre>
   <h2>场景二：常用按钮</h2>
   <button class="btn px-btn px-btn-success">常用按钮</button>
+  <button class="btn px-btn px-btn-success create">创建按钮</button>
+  <div class="h-20"></div>
+  <p>代码示例</p>
   <pre class="px-pre">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-success">常用按钮&lt;/button>
+      &lt;button class="btn px-btn px-btn-success create">创建按钮&lt;/button>
     </code>
   </pre>
+  <h2>场景三：表格按钮</h2>
 </section>
