--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -72,4 +72,19 @@
       <button class="btn px-btn px-btn-operate">其他</button>
     </div>
   </div>
+  <div class="h-20"></div>
+  <p>代码示例</p>
+  <pre class="px-pre">
+    <code class="px-code">
+      &lt;div ngbDropdown>
+        &lt;button class="btn px-btn px-btn-operate px-btn-operate-more">编辑&lt;/button>
+        &lt;button class="btn px-btn px-btn-operate-more-dropdown-toggle" ngbDropdownToggle>&lt;/button>
+        &lt;div class="px-btn-operate-more-dropdown-menu dropdown-menu">
+          &lt;button class="btn px-btn px-btn-operate">下载&lt;/button>
+          &lt;button class="btn px-btn px-btn-operate">删除&lt;/button>
+          &lt;button class="btn px-btn px-btn-operate">其他&lt;/button>
+        &lt;/div>
+      &lt;/div>
+    </code>
+  </pre>
 </section>
