--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -87,4 +87,8 @@
       &lt;/div>
     </code>
   </pre>
+  <h2>场景四：组合按钮</h2>
+  <p>确认取消按钮</p>
+  <button class="btn px-btn px-btn-primary">确认</button>
+  <button class="btn px-btn px-btn-cancel">取消</button>
 </section>
