--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -108,4 +108,14 @@
   <button class="btn px-btn px-btn-cancel">取消</button>
   <button class="btn px-btn px-btn-delete" disabled>删除</button>
   <button class="btn px-btn px-btn-cancel" disabled>取消</button>
+  <div class="h-20"></div>
+  <p>代码示例</p>
+  <pre class="px-pre">
+    <code class="px-code">
+      &lt;button class="btn px-btn px-btn-delete">删除&lt;/button>
+      &lt;button class="btn px-btn px-btn-cancel">取消&lt;/button>
+      &lt;button class="btn px-btn px-btn-delete" disabled>删除&lt;/button>
+      &lt;button class="btn px-btn px-btn-cancel" disabled>取消&lt;/button>
+    </code>
+  </pre>
 </section>
