--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -6,6 +6,12 @@
     </a>
   </li>
   <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/breadcrumb">
+      <i class="fa fa-circle-o"></i>
+      <span>Breadcrumb</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a role="button" routerLink="/main/css/button">
       <i class="fa fa-circle-o"></i>
       <span>Button</span>
