--- a/src/app/css/breadcrumb/css-breadcrumb.component.html
+++ b/src/app/css/breadcrumb/css-breadcrumb.component.html
@@ -1,4 +1,12 @@
 <section class="px-content-header">
   <h1>面包屑导航-Breadcrumb</h1>
-  <small></small>
+  <small>位于页面最顶部，用于快速导航</small>
+</section>
+
+<section class="px-content">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a role="button">全局CSS样式</a></li>
+    <li class="breadcrumb-item"><a role="button">面包屑导航</a></li>
+    <li class="breadcrumb-item">面包屑导航示例</li>
+  </ol>
 </section>
