--- a/src/app/css/breadcrumb/css-breadcrumb.component.html
+++ b/src/app/css/breadcrumb/css-breadcrumb.component.html
@@ -5,8 +5,8 @@
 
 <section class="px-content">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a role="button">全局CSS样式</a></li>
-    <li class="breadcrumb-item"><a role="button">面包屑导航</a></li>
-    <li class="breadcrumb-item">面包屑导航示例</li>
+    <li class="breadcrumb-item"><a role="button" routerLink="/main/css">概览</a></li>
+    <li class="breadcrumb-item"><a role="button" routerLink="/main/css/button">按钮</a></li>
+    <li class="breadcrumb-item">面包屑导航</li>
   </ol>
 </section>
