--- a/src/app/css/breadcrumb/css-breadcrumb.component.html
+++ b/src/app/css/breadcrumb/css-breadcrumb.component.html
@@ -9,4 +9,15 @@
     <li class="breadcrumb-item"><a role="button" routerLink="/main/css/button">按钮</a></li>
     <li class="breadcrumb-item">面包屑导航</li>
   </ol>
+  <div class="h-20"></div>
+  <p>代码示例</p>
+  <pre class="px-pre">
+    <code class="px-code">
+      &lt;ol class="breadcrumb">
+        &lt;li class="breadcrumb-item">&lt;a role="button" routerLink="/main/css">概览&lt;/a>&lt;/li>
+        &lt;li class="breadcrumb-item">&lt;a role="button" routerLink="/main/css/button">按钮&lt;/a>&lt;/li>
+        &lt;li class="breadcrumb-item">面包屑导航&lt;/li>
+      &lt;/ol>
+    </code>
+  </pre>
 </section>
