--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -9,8 +9,8 @@
   <button class="btn px-btn px-btn-default">单个操作</button>
   <button class="btn px-btn px-btn-default" disabled>单个操作</button>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-default">单个操作&lt;/button>
       &lt;button class="btn px-btn px-btn-default" disabled>单个操作&lt;/button>
@@ -26,8 +26,8 @@
     </div>
   </div>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;div ngbDropdown>
         &lt;button class="btn px-btn px-btn-default px-btn-default-more" ngbDropdownToggle>更多操作&lt;/button>
@@ -43,8 +43,8 @@
   <button class="btn px-btn px-btn-success">常用按钮</button>
   <button class="btn px-btn px-btn-success create">创建按钮</button>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-success">常用按钮&lt;/button>
       &lt;button class="btn px-btn px-btn-success create">创建按钮&lt;/button>
@@ -55,8 +55,8 @@
   <button class="btn px-btn px-btn-operate">编辑</button>
   <button class="btn px-btn px-btn-operate" disabled>编辑</button>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-operate">编辑&lt;/button>
       &lt;button class="btn px-btn px-btn-operate" disabled>编辑&lt;/button>
@@ -73,8 +73,8 @@
     </div>
   </div>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;div ngbDropdown>
         &lt;button class="btn px-btn px-btn-operate px-btn-operate-more">编辑&lt;/button>
@@ -94,8 +94,8 @@
   <button class="btn px-btn px-btn-primary" disabled>确认</button>
   <button class="btn px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-primary">确认&lt;/button>
       &lt;button class="btn px-btn px-btn-cancel">取消&lt;/button>
@@ -109,8 +109,8 @@
   <button class="btn px-btn px-btn-delete" disabled>删除</button>
   <button class="btn px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
-  <p>代码示例</p>
-  <pre class="px-pre">
+  <p><a role="button"(click)="isCollapse = !isCollapse">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-delete">删除&lt;/button>
       &lt;button class="btn px-btn px-btn-cancel">取消&lt;/button>
