--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -9,7 +9,7 @@
   <button class="btn px-btn px-btn-default">单个操作</button>
   <button class="btn px-btn px-btn-default" disabled>单个操作</button>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse1">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-default">单个操作&lt;/button>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse2 = !isCollapse2">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse2 = !isCollapse2">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse2">
     <code class="px-code">
       &lt;div ngbDropdown>
@@ -43,7 +43,7 @@
   <button class="btn px-btn px-btn-success">常用按钮</button>
   <button class="btn px-btn px-btn-success create">创建按钮</button>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse3 = !isCollapse3">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse3 = !isCollapse3">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse3">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-success">常用按钮&lt;/button>
@@ -55,7 +55,7 @@
   <button class="btn px-btn px-btn-operate">编辑</button>
   <button class="btn px-btn px-btn-operate" disabled>编辑</button>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse4 = !isCollapse4">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse4 = !isCollapse4">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse4">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-operate">编辑&lt;/button>
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse5 = !isCollapse5">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse5 = !isCollapse5">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse5">
     <code class="px-code">
       &lt;div ngbDropdown>
@@ -94,7 +94,7 @@
   <button class="btn px-btn px-btn-primary" disabled>确认</button>
   <button class="btn px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse6 = !isCollapse6">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse6 = !isCollapse6">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse6">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-primary">确认&lt;/button>
@@ -109,7 +109,7 @@
   <button class="btn px-btn px-btn-delete" disabled>删除</button>
   <button class="btn px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
-  <p><a role="button"(click)="isCollapse7 = !isCollapse7">代码示例 <i class="fa fa-plus"></i></a></p>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse7 = !isCollapse7">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse7">
     <code class="px-code">
       &lt;button class="btn px-btn px-btn-delete">删除&lt;/button>
