--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -1,8 +1,8 @@
 <ul class="px-sidebar-menu">
   <li routerLinkActive="active">
-    <a role="button" routerLink="/main/css/overview">
+    <a role="button" routerLink="/main/css/alert">
       <i class="fa fa-circle-o"></i>
-      <span>概览</span>
+      <span>Alert</span>
     </a>
   </li>
   <li routerLinkActive="active">
