--- a/src/app/css/breadcrumb/css-breadcrumb.component.html
+++ b/src/app/css/breadcrumb/css-breadcrumb.component.html
@@ -5,7 +5,7 @@
 
 <section class="px-content">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a role="button" routerLink="/main/css">概览</a></li>
+    <li class="breadcrumb-item"><a role="button" routerLink="/main/css/alert">提示</a></li>
     <li class="breadcrumb-item"><a role="button" routerLink="/main/css/button">按钮</a></li>
     <li class="breadcrumb-item">面包屑导航</li>
   </ol>
@@ -13,7 +13,7 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse">
     <code class="px-code">
       &lt;ol class="breadcrumb">
-        &lt;li class="breadcrumb-item">&lt;a role="button" routerLink="/main/css">概览&lt;/a>&lt;/li>
+        &lt;li class="breadcrumb-item">&lt;a role="button" routerLink="/main/css/alert">提示&lt;/a>&lt;/li>
         &lt;li class="breadcrumb-item">&lt;a role="button" routerLink="/main/css/button">按钮&lt;/a>&lt;/li>
         &lt;li class="breadcrumb-item">面包屑导航&lt;/li>
       &lt;/ol>
