--- a/src/app/css/alert/css-alert.component.html
+++ b/src/app/css/alert/css-alert.component.html
@@ -1,1 +1,8 @@
-ddsdsdsda
+<section class="px-content-header">
+  <h1>提示-Alert</h1>
+  <small>位于页面最顶部，导航栏下，分3种</small>
+</section>
+
+<div class="px-alert px-alert-success">
+  您的操作已经成功。3s后此提示自动消失。
+</div>
