--- a/public/css/px-styles/alert.css
+++ b/public/css/px-styles/alert.css
@@ -2,7 +2,10 @@
 /* alert
 /****************************/
 .px-alert {
-    width: 600px;
+    position: fixed;
+    top: 50px;
+    left: 30%;
+    right: 30%;
     height: 40px;
     font-size: 14px;
     color: #fff;
