--- a/src/app/css/alert/css-alert.component.html
+++ b/src/app/css/alert/css-alert.component.html
@@ -1,6 +1,6 @@
 <section class="px-content-header">
   <h1>提示-Alert</h1>
-  <small>位于页面最顶部，导航栏下，分3种</small>
+  <small>位于页面最顶部导航栏下，提供三种不同的场景</small>
 </section>
 
 <div class="px-alert px-alert-success">
