--- a/public/css/px-styles/alert.css
+++ b/public/css/px-styles/alert.css
@@ -4,9 +4,9 @@
 .px-alert {
     position: fixed;
     top: 50px;
-    left: 25%;
-    right: 25%;
+    left: calc(50% - 300px);
     height: 40px;
+    width: 600px;
     font-size: 14px;
     color: #fff;
     border-radius: 3px;
