--- a/public/css/px-styles/alert.css
+++ b/public/css/px-styles/alert.css
@@ -12,8 +12,13 @@
     border-radius: 3px;
     text-align: center;
     padding: 13px 0;
+    z-index: 9999;
 }
 
 .px-alert-success {
     background-color: #73cf22;
+}
+
+.px-alert-attention {
+    background-color: #f7c515;
 }
