--- a/src/app/css/alert/css-alert.component.html
+++ b/src/app/css/alert/css-alert.component.html
@@ -62,4 +62,19 @@
     <a role="button" class="px-alert-close" (click)="isShowAlarm = false"></a>
     <b>错误！</b>操作失败，请联系管理员。
   </div>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse3 = !isCollapse3">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse3">
+    <code class="px-code">
+      //html
+      &lt;button class="btn px-btn px-btn-delete" (click)="isShowAlarm = true">打开告警提示&lt;/button>
+        &lt;div class="px-alert px-alert-alarm" *ngIf="isShowAlarm">
+        &lt;a role="button" class="px-alert-close" (click)="isShowAlarm = false">&lt;/a>
+        &lt;b>错误！&lt;/b>操作失败，请联系管理员。
+      &lt;/div>
+
+      //typescript
+      isShowAlarm:boolean = false;
+    </code>
+  </pre>
 </section>
