--- a/src/app/css/card/css-card.component.html
+++ b/src/app/css/card/css-card.component.html
@@ -1,4 +1,18 @@
 <section class="px-content-header">
   <h1>卡片-Card</h1>
-  <small>卡片可以在一行显示多个</small>
+  <small>卡片可以在一行显示多个，提供两种不同的场景</small>
+</section>
+
+<section class="px-content">
+
+  <h2>场景一：有标题的卡片</h2>
+  <div class="px-card">
+    <div class="px-card-title">
+
+    </div>
+    <div class="px-card-content">
+      
+    </div>
+  </div>
+
 </section>
