--- a/public/css/px-styles/card.css
+++ b/public/css/px-styles/card.css
@@ -1,3 +1,25 @@
 /*****************************/
 /* card
 /****************************/
+.px-card {
+    display: inline-block;
+    border: 1px solid #e6e6e6;
+    height: 230px;
+    width: 360px;
+}
+
+.px-card:hover {
+    border: 1px solid #7fd5ff;
+}
+
+.px-card-title {
+    border-bottom: 1px solid #e6e6e6;
+    height: 40px;
+    padding: 11px 11px 11px 20px;
+    color: #4d5761;
+    font-size: 18px;
+}
+
+.px-card-content {
+
+}
