--- a/src/app/css/card/css-card.component.html
+++ b/src/app/css/card/css-card.component.html
@@ -8,26 +8,26 @@
   <h2>场景一：有标题的卡片</h2>
   <div class="px-card">
     <div class="px-card-title">
-      卡片1标题
+      卡片标题
     </div>
     <div class="px-card-content">
-
+      这是卡片的中心内容
     </div>
   </div>
   <div class="px-card">
     <div class="px-card-title">
-      卡片2标题
+      卡片标题
     </div>
     <div class="px-card-content">
-
+      这是卡片的中心内容
     </div>
   </div>
   <div class="px-card">
     <div class="px-card-title">
-      卡片3标题
+      卡片标题
     </div>
     <div class="px-card-content">
-
+      这是卡片的中心内容
     </div>
   </div>
 
