--- a/public/css/px-styles/card.css
+++ b/public/css/px-styles/card.css
@@ -21,5 +21,9 @@
 }
 
 .px-card-content {
-
+    text-align: center;
+    padding: 20px;
+    color: #7c868d;
+    font-size: 14px;
+    vertical-align: middle;
 }
