--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -23,4 +23,10 @@
       <span>Card</span>
     </a>
   </li>
+  <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/modal">
+      <i class="fa fa-circle-o"></i>
+      <span>Modal</span>
+    </a>
+  </li>
 </ul>
