--- a/src/app/css/modal/css-modal.component.html
+++ b/src/app/css/modal/css-modal.component.html
@@ -9,12 +9,14 @@
   <template #modal1_template>
     <div class="px-modal-header">
       <h4>模态框标题</h4>
-      <a role="button" (click)="modal1.close()">
-
-      </a>
+      <a role="button" (click)="modal1.close()"></a>
     </div>
     <div class="px-modal-body">
-      test
+      <div class="px-modal-confirm">
+        <img src="../../../../public/images/modal_confirm.png">
+        <h5>确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？</h5>
+        <h6></h6>
+      </div>
     </div>
     <div class="px-modal-footer">
       <button class="btn px-btn px-btn-primary">确认</button>
