--- a/public/css/px-styles/modal.css
+++ b/public/css/px-styles/modal.css
@@ -44,14 +44,16 @@
 }
 
 .px-modal-confirm {
-    padding-top: 30px;
-}
-
-.px-modal-confirm img {
+    padding-top: 50px;
 }
 
 .px-modal-confirm h5 {
     font-size: 18px;
     color: #4d5761;
     padding: 11px 70px;
+}
+
+.px-modal-confirm small {
+    font-size: 14px;
+    color: #c2c6c9;
 }
