--- a/src/app/css/modal/css-modal.component.html
+++ b/src/app/css/modal/css-modal.component.html
@@ -14,8 +14,8 @@
     <div class="px-modal-body">
       <div class="px-modal-confirm">
         <img src="../../../../public/images/modal_confirm.png">
-        <h5>确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？确认提交吗？</h5>
-        <h6></h6>
+        <h5>确认提交吗？</h5>
+        <small>提交后可以查看提交数据</small>
       </div>
     </div>
     <div class="px-modal-footer">
@@ -23,4 +23,43 @@
       <button class="btn px-btn px-btn-cancel" (click)="modal1.close()">关闭</button>
     </div>
   </template>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse1">
+    <code class="px-code">
+      //html
+      &lt;button class="btn px-btn px-btn-primary" (click)="open1()">打开操作模态框&lt;/button>
+      &lt;template #modal1_template>
+        &lt;div class="px-modal-header">
+          &lt;h4>模态框标题&lt;/h4>
+          &lt;a role="button" (click)="modal1.close()">&lt;/a>
+        &lt;/div>
+        &lt;div class="px-modal-body">
+          &lt;div class="px-modal-confirm">
+            &lt;img src="../../../../public/images/modal_confirm.png">
+            &lt;h5>确认提交吗？&lt;/h5>
+            &lt;small>提交后可以查看提交数据&lt;/small>
+          &lt;/div>
+        &lt;/div>
+        &lt;div class="px-modal-footer">
+          &lt;button class="btn px-btn px-btn-primary">确认&lt;/button>
+          &lt;button class="btn px-btn px-btn-cancel" (click)="modal1.close()">关闭&lt;/button>
+        &lt;/div>
+      &lt;/template>
+      
+      //typescript
+      @ViewChild('modal1_template') modal1_template:any;
+      modal1:any;
+
+      constructor(private modalService:NgbModal) &#123;
+      }
+
+      open1() &#123;
+        this.modal1 = this.modalService.open(this.modal1_template, &#123;
+          backdrop: true,
+          keyboard: true
+        });
+      }
+    </code>
+  </pre>
 </section>
