--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -29,4 +29,10 @@
       <span>Modal</span>
     </a>
   </li>
+  <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/tab">
+      <i class="fa fa-circle-o"></i>
+      <span>Tab</span>
+    </a>
+  </li>
 </ul>
