--- a/src/app/css/tab/css-tab.component.html
+++ b/src/app/css/tab/css-tab.component.html
@@ -2,3 +2,24 @@
   <h1>标签页-Tab</h1>
   <small>标签页可于显示分类</small>
 </section>
+
+<section class="px-content">
+  <div class="h-20"></div>
+  <ngb-tabset>
+    <ngb-tab title="标题1">
+      <template ngbTabContent>
+        这是内容一
+      </template>
+    </ngb-tab>
+    <ngb-tab title="标题2">
+      <template ngbTabContent>
+        这是内容二
+      </template>
+    </ngb-tab>
+    <ngb-tab title="标题3">
+      <template ngbTabContent>
+        这是内容三
+      </template>
+    </ngb-tab>
+  </ngb-tabset>
+</section>
